tests/ui/natspec/tag_sema.stderr
error: documentation tag @author can only be given once
  --> ROOT/tests/ui/natspec/tag_sema.sol:LL:CC
   |
LL | /// @author Second author
   |      ^^^^^^

error: documentation tag @title can only be given once
  --> ROOT/tests/ui/natspec/tag_sema.sol:LL:CC
   |
LL | /// @title Second title
   |      ^^^^^

error: duplicate documentation for parameter 'x'
  --> ROOT/tests/ui/natspec/tag_sema.sol:LL:CC
   |
LL |     /// @param x Second documentation
   |          ^^^^^
   |
note: previous documentation here
  --> ROOT/tests/ui/natspec/tag_sema.sol:LL:CC
   |
LL |     /// @param x First documentation
   |          ^^^^^

error: documentation tag @inheritdoc can only be given once
  --> ROOT/tests/ui/natspec/tag_sema.sol:LL:CC
   |
LL |     /// @inheritdoc DuplicateInheritdocBase
   |          ^^^^^^^^^^

error: documentation tag `@author` not valid for functions
  --> ROOT/tests/ui/natspec/tag_sema.sol:LL:CC
   |
LL |     /// @author Invalid author on function
   |          ^^^^^^

error: documentation tag `@title` not valid for functions
  --> ROOT/tests/ui/natspec/tag_sema.sol:LL:CC
   |
LL |     /// @title Invalid title on function
   |          ^^^^^

error: documentation tag `@return` not valid for events
  --> ROOT/tests/ui/natspec/tag_sema.sol:LL:CC
   |
LL |     /// @return Invalid return on event
   |          ^^^^^^

error: documentation tag `@inheritdoc` not valid for events
  --> ROOT/tests/ui/natspec/tag_sema.sol:LL:CC
   |
LL |     /// @inheritdoc InvalidInheritdocBase
   |          ^^^^^^^^^^

error: documentation tag `@param` references non-existent parameter 'y'
  --> ROOT/tests/ui/natspec/tag_sema.sol:LL:CC
   |
LL |     /// @param y Invalid parameter name
   |          ^^^^^

error: too many `@return` tags: function has 2 return values, found 3
  --> ROOT/tests/ui/natspec/tag_sema.sol:LL:CC
   |
LL |     /// @return Third return value
   |          ^^^^^^

error: aborting due to 10 previous errors

